--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
         <div class="discoball">
           <img src="https://drive.google.com/uc?id=0B7QrEBMF4GTGQ3lfRzV0cU5rNHM" alt="">
         </div>        
+        <div id="solar-gif" style="width:100%;height:0;padding-bottom:92%;position:relative;margin-top: 200%;opacity: 0.2;">
+          <iframe src="https://giphy.com/embed/Ip3aL5ZJLEHqU" width="200%" height="200%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+        </div>
     </div>
   </div>  
 
