--- a/index.html
+++ b/index.html
@@ -51,10 +51,16 @@
     <div class="col-2">
         <div class="discoball">
           <img src="https://drive.google.com/uc?id=0B7QrEBMF4GTGQ3lfRzV0cU5rNHM" alt="">
-        </div>        
-        <div id="solar-gif" style="width:100%;height:0;padding-bottom:92%;position:relative;margin-top: 200%;opacity: 0.2;">
+        </div>
+
+        <div id="solar-gif" style="width:100%;height:0;padding-bottom:92%;position:relative;margin-top: 200%;opacity: 0.3;">
           <iframe src="https://giphy.com/embed/Ip3aL5ZJLEHqU" width="200%" height="200%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
         </div>
+
+        <div id="dancing-gif" style="width:100%;height:0;padding-bottom:120%;position:relative;opacity: 0.3;margin-left: 220%;margin-top: -200px;">
+          <iframe src="https://giphy.com/embed/wFYec89PodTG0" width="200%" height="200%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+        </div>
+
     </div>
   </div>  
 
